--- a/front/index.html
+++ b/front/index.html
@@ -19,7 +19,7 @@
                 <img src="logoOrinoco.png" id="logo">
             </a>
 
-            <a class="basketPage" href="front\panier.html">
+            <a class="basketPage" href="panier.html">
                 <div class="panier">Panier</div>
             </a>
         </nav>
