--- a/front/panier.html
+++ b/front/panier.html
@@ -15,7 +15,9 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg justify-content-between">
+        
+
+        <nav style="position: relative;" class="navbar navbar-expand-lg justify-content-between">
             <a class="navbar-brand" href="index.html">
                 <img src="logoOrinoco.png" id="logo">
             </a>
@@ -23,8 +25,11 @@
             <a class="basketPage" href="panier.html">
                 <div class="panier">Panier</div>
             </a>
+            <div id="greenText">Quantité modifiée !</div>
         </nav>
 
+        <div id="greenText">Quantité modifiée !</div>
+        <div id="redText">Item supprimé !</div>
         <div id="basket" class="d-flex flex-wrap justify-content-around"></div>
         <div id="payment" class="card border-light text-center w-50 m-auto">
             <h1 class="card-title">Paiement</h1>
