--- a/front/panier.html
+++ b/front/panier.html
@@ -18,7 +18,7 @@
         
 
         <nav style="position: relative;" class="navbar navbar-expand-lg justify-content-between">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand logo_link" href="index.html">
                 <img src="logoOrinoco.png" id="logo">
             </a>
 
@@ -31,7 +31,7 @@
         <div id="greenText">Quantité modifiée !</div>
         <div id="redText">Item supprimé !</div>
         <div id="basket" class="d-flex flex-wrap justify-content-around"></div>
-        <div id="payment" class="card border-light text-center w-50 m-auto">
+        <div id="payment" class="card border-light text-center w-75 m-auto">
             <h1 class="card-title">Paiement</h1>
             <h2 id="total"></h2>
             <p>Veuillez remplir les champs suivants pour pouvoir procéder au paiement :</p>
