--- a/front/produit.html
+++ b/front/produit.html
@@ -16,7 +16,7 @@
 
     <body>
         <nav class="navbar navbar-expand-lg justify-content-between">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand logo_link" href="index.html">
                 <img src="logoOrinoco.png" id="logo">
             </a>
 
@@ -27,11 +27,11 @@
 
         <div id="confirmText">Item ajouté au panier !</div>
         <div class="container furniture produitBox d-flex flex-wrap">
-            <div class="col-8">
+            <div class="col-8 col-xs-8">
                 <h1 id="name"></h1>
                 <img id="image" src="">
             </div>
-            <div class="col-4 box2">
+            <div class="col-4 box2 col-xs-5">
                 <p id="description"></p>
                 <h2 id="price"></h2>
                 <div>
