--- a/front/index.html
+++ b/front/index.html
@@ -15,10 +15,11 @@
 
     <body>
         <nav class="navbar navbar-expand-lg justify-content-between">
-            <a class="navbar-brand" href="#">
+            <div>
+            <a class="navbar-brand logo_link" href="#">
                 <img src="logoOrinoco.png" id="logo">
             </a>
-
+            </div>
             <a class="basketPage" href="panier.html">
                 <div class="panier">Panier</div>
             </a>
