--- a/front/order.html
+++ b/front/order.html
@@ -17,7 +17,7 @@
     <body>
 
         <nav class="navbar navbar-expand-lg justify-content-between">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand logo_link" href="index.html">
                 <img src="logoOrinoco.png" id="logo">
             </a>
 
@@ -34,6 +34,21 @@
             <h4 id="total"></h4>
             <div id="basket" class="d-flex justify-content-center"></div>
         </div>
+
+        <footer>
+            <div class="footer d-flex justify-content-around">
+                <div class="footer1">
+                    <p class="text_footer">A propos de Orinoco</p>
+                    <p class="text_footer">Contact</p>
+                    <p class="text_footer">Mentions légales</p>
+                </div>
+
+                <div class="footer2">
+                    <p class="text_footer">Orinoco. Tous droits réservés</p>
+                    <!-- Logo FB, Twitter, Pinterest... -->
+                </div>
+            </div>
+        </footer>
 
 
         <script type="text/javascript" src="order.js"></script> 
